DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.0.1 released - 8.29.2005]===================================================
Aug-29-2005 patrickh    NEW VERSION: 1.0.1

[1.0.0 released - 7.5.2005]====================================================
Jul-07-2005 patrickh    NEW VERSION: 1.0.0
Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 0.93.1

[1.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 0.93.0
May-13-2005 allenb      Make the copy constructor on jccl::Configuration
                        use a const reference.
                        NEW VERSION: 0.92.13
Apr-10-2005 patrickh    Removed methods jccl::ConfigDefinition::assertValid(),
                        jccl::ConfigElement::assertValid(), and
                        jccl::PropertyDefinition::assertValid().
                        NEW VERSION: 0.92.12
Mar-30-2005 patrickh    Added the ability to change the ordering of property
                        values within a variable-valued property through the
                        Java API and the Java editor Beans.
                        NEW VERSION: 0.92.11
Mar-22-2005 patrickh    Added a new method editorClosing() to the interface
                        org.vrjuggler.jccl.editors.CustomEditor.
                        NEW VERSION: 0.92.10
Mar-20-2005 patrickh    Added functions to the JCCL Config Java classes that
                        are useful in performing base type operations on config
                        definitions.
                        NEW VERSION: 0.92.9
Mar-14-2005 patrickh    Provide public Java classes for allowing ConfigElement
                        references to be stored in the Java clipboard.
                        NEW VERSION: 0.92.8
Mar-05-2005 patrickh    Extended the config definition editor to support