@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-12-2005 patrickh    jccl::ConfigManager is no longer responsible for
+                        deleting the memory held its pointre to the remote
+                        run-time reconfiguration interface implementation.
+
 [1.0.1 released - 8.29.2005]===================================================
 Aug-29-2005 patrickh    NEW VERSION: 1.0.1
 
